MFC r282578:   Mark data checksum as valid for multicast packets, that we send back   to myself via simloop.   Also remove duplicate check under #ifdef DIAGNOSTIC.

PR:		180065